--- a/TD/exo/premierspas.tex
+++ b/TD/exo/premierspas.tex
@@ -1,8 +1,21 @@
 \section{Premiers Pas}
 \subsection{R est une calculette}
+
 \lstinputlisting{code/calculsimple.R}
+\paragraph{EXERCICE} : 
+ Calculer la différence entre votre dernière année à l'université
+ Et votre année d'obtention du bac et divisé par la différence entre 2013 et votre
+ année de naissance. Multiplier par 100 pour obtenir un pourcentage du temps passé 
+ à l'université.
+\lstinputlisting{code/calculsimple2.R}
+\paragraph{EXERCICE} : 
+Répéter l'exercice précédant mais en utilisant des variables. Plusieurs étapes peuvent être nécessaires.
 \subsection{Créer des objets et les utiliser}
 \subsubsection{Vecteurs}
 \lstinputlisting{code/vecteur.R}
+\paragraph{EXERCICE} En utilisant la fonction \emph{seq()}, Créer un vecteur de nombres impaires de 7 à 77. 
+\lstinputlisting{code/vecteur2.R}
+\paragraph{EXERCICE} En utilisant les fonctions \emph{rep()} et \emph{paste(}) et \emph{seq()} créer un vecteur identique à \emph{monVecteurA}, mais allant de 1 à 20.
+\lstinputlisting{code/vecteur3.R}
 \subsubsection{Matrices et data frame}
 \lstinputlisting{code/datamatrice.R}
