Modif TD : vecteur programation

--- a/TD/exo/importExport.tex
+++ b/TD/exo/importExport.tex
@@ -1,5 +1,5 @@
 \section{Erreurs, importer exporter des données}
 \subsection{Importer et exporter des données}
 \lstinputlisting{code/matrice.R}
-\paragraphe{Exercice} : retrouver les cinq erreurs de cette ligne de code.
+\paragraph{Exercice} : retrouver les cinq erreurs de cette ligne de code.
 \lstinputlisting{code/bugTuto.R}
