--- a/TD/exo/premierspas.tex
+++ b/TD/exo/premierspas.tex
@@ -17,5 +17,7 @@ Répéter l'exercice précédant mais en utilisant des variables. Plusieurs éta
 \lstinputlisting{code/vecteur2.R}
 \paragraph{EXERCICE} En utilisant les fonctions \emph{rep()} et \emph{paste(}) et \emph{seq()} créer un vecteur identique à \emph{monVecteurA}, mais allant de 1 à 20.
 \lstinputlisting{code/vecteur3.R}
+\paragraph{EXERCICE} Trouver une manière d'acceder au dernier élément d'un vecteur.
+\lstinputlisting{code/vecteur4.R}
 \subsubsection{Matrices et data frame}
 \lstinputlisting{code/datamatrice.R}
