--- a/TD/guideFormatio.tex
+++ b/TD/guideFormatio.tex
@@ -21,9 +21,9 @@
 \renewcommand{\labelitemi}{$\bullet$}
 \renewcommand{\labelitemii}{$\bullet$}
 
-%\title{\input{title}}
-%\author{\input{author}}
-
+\title{Initiation à R}
+\author{É.Hirchaud\\F.Simonnet}
+\date{26 Septembre 2013}
 \lstset{
 language=R,
 basicstyle=\ttfamily,
@@ -53,7 +53,8 @@ literate={é}{{\'e}}1
 }
 \lhead{}
 \begin{document}
-
+\maketitle
+\tableofcontents
 \input{exo/envRstudio.tex}
 \input{exo/premierspas.tex}
 %\input{exo/notionspratique.tex}
