--- a/TD/exo/importExport.tex
+++ b/TD/exo/importExport.tex
@@ -1,5 +1,4 @@
-\section{Erreurs, importer exporter des données}
-\subsection{Importer et exporter des données}
+\section{Importer exporter des données}
 \lstinputlisting{code/matrice.R}
 \paragraph{Exercice} : retrouver les cinq erreurs de cette ligne de code.
 \lstinputlisting{code/bugTuto.R}
