--- a/TD/exo/premierspas.tex
+++ b/TD/exo/premierspas.tex
@@ -3,15 +3,14 @@
 
 \lstinputlisting{code/calculsimple.R}
 
-\paragraph{EXERCICE} : 
+\paragraph{EXERCICE} \par 
 
  Calculer le temps passé dans votre dernière structure professionelle (université, labo, entreprise \dots)
- puis diviser par la différence entre l'année en cours et votre année de naissance. Multiplier par 100 pour obtenir un pourcentage du temps passé 
- dans cette structure.\par
-
+ puis diviser par la différence entre l'année en cours et votre année de naissance. Multiplier par 100 pour obtenir un pourcentage du temps passé  dans cette structure.
+ \vspace{1em}
 \lstinputlisting{code/calculsimple2.R}
 
-\paragraph{EXERCICE} : 
+\paragraph{EXERCICE}  \par
 
 Répéter l'exercice précédant mais en utilisant des variables.
 \subsection{Créer des objets et les utiliser}
@@ -20,29 +19,40 @@ Répéter l'exercice précédant mais en utilisant des variables.
 
 \lstinputlisting{code/vecteur.R}
 
-\paragraph{EXERCICE} En utilisant la fonction \emph{seq()}, créer un vecteur de nombres impaires allant de 7 à 77. 
+\paragraph{EXERCICE} \par
 
+En utilisant la fonction \emph{seq()}, créer un vecteur de nombres impairs allant de 7 à 77. 
+
+\vspace{1em}
 \lstinputlisting{code/vecteur2.R}
 
-\paragraph{EXERCICE} En utilisant les fonctions \emph{rep()} et \emph{paste(}) et \emph{seq()} créer un vecteur identique à \emph{monVecteurA}, mais allant de 1 à 20. Dans un premier temps utiliser des étapes intermédiares.
+\paragraph{EXERCICE} \par
 
+En utilisant les fonctions \emph{rep()}, \emph{paste(}) et \emph{seq()} créer un vecteur identique à \emph{monVecteurA}, mais allant de 1 à 20. Dans un premier temps utiliser des étapes intermédiares.
+
+\vspace{1em}
 \lstinputlisting{code/vecteur3.R}
 
-\paragraph{EXERCICE} Trouver une manière d'accèder au dernier élément d'un vecteur.
+\paragraph{EXERCICE} \par
 
+Trouver une manière d'accèder au dernier élément d'un vecteur.
+
+\vspace{1em}
 \lstinputlisting{code/vecteur4.R}
 
 \subsubsection{Matrices et data frame}
 
 \lstinputlisting{code/datamatrice.R}
-\paragraph{EXERCICE} : 
+ \vspace{1em}
+\paragraph{EXERCICE} 
 \begin{itemize}
-\item Combien de lignes la fonction head() affiche - t'elle par défaut
+\item Combien de lignes la fonction head() affiche -t-elle par défaut ?
 \item Comment afficher plus ou moins de ligne ? Utiliser la documentation de la fonction head pour trouver.
 \item Comment voir la matrice à partir des dernières lignes ?
 \end{itemize}
 \lstinputlisting{code/datamatrice2.R}
-\paragraph{EXERCICE} :
+ \vspace{1em}
+\paragraph{EXERCICE} 
 \begin{itemize}
 \item Quel type d'objet renvoie la fonction dim()
 \item La fonction \emph{ncol()} permet de nous renseigner sur le nombre de colonnes.
@@ -50,5 +60,8 @@ Trouver une fonction similaire pour trouver le nombre de lignes
 \item Avec la fonction \emph{dim()} afficher uniquement le nombre de lignes
 \end{itemize}
 \lstinputlisting{code/datamatrice3.R}
-\paragraph{EXERCICE} : Recupérer les colonnes 1, 7 et 3 de la matrice \emph{maMatrice}
+ \vspace{1em}
+\paragraph{EXERCICE} \par
+
+Recupérer les colonnes 1, 7 et 3 de la matrice \emph{maMatrice}
 \lstinputlisting{code/datamatrice4.R}
