--- a/TD/guideFormatio.tex
+++ b/TD/guideFormatio.tex
@@ -21,8 +21,9 @@
 \renewcommand{\labelitemi}{$\bullet$}
 \renewcommand{\labelitemii}{$\bullet$}
 
-\title{Initiation à R}
-\author{É.Hirchaud\\F.Simonnet}
+\title{\textsc{Formation\\Langage de programmation R - Initiation}}
+%\author{\textsc{Édouard Hirchaud Floriane Simonet}} 
+\author{\textsc{Édouard Hirchaud}\\ \url{edouard.hirchaud@univ-nantes.fr} \\\textsc{Floriane Simonet}\\ \url{floriane.simonet@univ-nantes.fr} }
 \date{26 Septembre 2013}
 \lstset{
 language=R,
@@ -57,12 +58,9 @@ literate={é}{{\'e}}1
 \tableofcontents
 \input{exo/envRstudio.tex}
 \input{exo/premierspas.tex}
-%\input{exo/notionspratique.tex}
 \input{exo/importExport.tex}
 \input{exo/graphique.tex}
-%\input{exo/script.tex}
 \input{exo/writeFunction.tex}
-%\input{exo/package.tex}
 
 
 \end{document}
