--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -1,4 +1,4 @@
-\documentclass[handout, table,svgnames,hyperref={pdfpagemode=FullScreen}]{beamer}
+\documentclass[table,svgnames,hyperref={pdfpagemode=FullScreen}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{color, colortbl}
@@ -443,7 +443,7 @@ literate={é}{{\'e}}1
 	\setbeamercovered{dynamic}
 	\begin{center}
 		\begin{itemize}
-			\item On également un nom
+			\item Ont également un nom
 			\item Une description (leur rôle)
 			\item Des arguments, paramètres
 			\item Retourne un ou des résultats
@@ -485,9 +485,9 @@ literate={é}{{\'e}}1
 	\setbeamercovered{dynamic}
 	\begin{exampleblock}{En informatique : }
 		\begin{itemize}
-			\item La fonction à un nom  : preparerPateAPizza
+			\item La fonction a un nom  : preparerPateAPizza
 			\item Les ingrédients sont des arguments : poidsFarine, volumeEau, poidsLevure
-			\item Les actions sont des suites d'instructions (ligne de commandes)
+			\item Les actions sont des suites d'instructions (lignes de commandes)
 			\item Le retour de la fonction est un objet que l'on peut stocker dans une variable : maPateAPizza.
 		\end{itemize}
 		\begin{lstlisting}
@@ -515,10 +515,10 @@ literate={é}{{\'e}}1
 	
 	Généralité sur les arguments.
 	\begin{itemize}
-		\item L'ordre des arguments n'a pas d'importance si leur noms est écrits
-		\item  Les variables doivent être dans un ordre précis si les noms ne sont pas écrits
-		\item  Certains arguments ont une valeur par défaut, si on ne la change pas, aucun besoin de l'écrire.
-		\item  Les valeurs attribuée aux arguments peuvent être des variables.
+		\item L'ordre des arguments n'a pas d'importance si leur nom est écrit
+		\item  Les variables doivent être dans un ordre précis si leur nom n'est pas écrit
+		\item  Certains arguments ont une valeur par défaut. Si on ne la change pas, aucun besoin de l'écrire.
+		\item  Les valeurs attribuées aux arguments peuvent être des variables.
 	\end{itemize}
 	\end{frame}
 		
@@ -535,15 +535,15 @@ literate={é}{{\'e}}1
 		\setbeamercovered{dynamic}
 		\frametitle{Script/Programme}
 		\begin{itemize}
-			\item Un script permet l'exécution automatique d'une série d'instruction, de fonction\dots
-			\item Ces instructions sont écrites dans un fichier texte qui à pour extension .R
+			\item Un script permet l'exécution automatique d'une série d'instructions, de fonctions\dots
+			\item Ces instructions sont écrites dans un fichier texte qui a pour extension .R
 			\item Un script comporte généralement des lignes de commentaire, précédées par le symbole \#.
 		\end{itemize}
 
 		\lstinputlisting[numbers=left, numberstyle=\ttfamily\color{blue}\footnotesize,stepnumber=1,numbersep=5pt,breaklines=true]{code/pizzaScript.R}
 	\end{frame}
 \begin{frame}
-	\frametitle{Règles de nomenclatures}
+	\frametitle{Règles de nomenclature}
 	\setbeamercovered{dynamic}
 	\begin{itemize}
 		\item Importance de la casse (majuscule/minuscule)
